<resources>
    <string name="app_name">BTL</string>
    <string name="action_search">Tìm kiếm</string>
    <string name="welcome">Welcome to Kitchen Stories!</string>
    <string name="user_name">Tên người dùng</string>
    <string name="password">Mật khẩu</string>
    <string name="create_account">Tạo tài khoản mới</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="ct_nau_an">Công thức nấu ăn</string>
    <string name="tip_ct">Thực đơn dễ làm, cả nhà mê</string>
    <string name="sign_up">Đăng ký</string>
    <string name="retype_password">Nhập lại mật khẩu</string>
    <string name="existing_user_go_to_sign_in">Người dùng đã tồn tại! Đi đến Đăng nhập</string>
    <string name="nguoi_viet">Người viết</string>
    <string name="nguoi_viet_2">Người viết: </string>
    <string name="title_mon_an">Bật Mí Cách Làm Ngan Xào Sả Ớt, Ngan Xào Lăn Ngon Mê Ly</string>
    <string name="chup_hinh">Chụp Hình</string>
    <string name="chon_hinh">Chọn Hình</string>
    <string name="ten_mon_an">Tên Món Ăn</string>
    <string name="nhap_ten_mon_an">Nhập vào tên món ăn</string>
    <string name="cong_thuc_mon_an">Công Thức Món Ăn</string>
    <string name="nhap_cong_thuc_mon_an">Nhập vào công thức món ăn</string>
    <string name="luu">Lưu</string>
    <string name="huy">Hủy Bỏ</string>
    <string name="back">Quay lại</string>
    <string name="an_sang">Ăn sáng</string>
    <string name="an_trua">Ăn trưa</string>
    <string name="an_toi">Ăn tối</string>
    <string name="an_phu">Ăn phụ</string>
    <string name="loai_mon_an">Loại món ăn</string>
    <string name="sign_out">Đăng xuất</string>
    <string name="bai_viet_cua_toi">Bài Viết Của Tôi</string>
    <string name="them_mon_an">Thêm Món Ăn</string>
    <string name="name">Name</string>
    <string name="title_chi_tiet">Bật Mí Cách Làm Ngan Xào Sả Ớt, Ngan Xào Lăn Ngon Mê Ly</string>
    <string name="ban_da_chon">Bạn Đã Chọn</string>
    <string name="bai_dang_cua_toi">Bài Đăng Của Tôi</string>
    <string name="them_cong_thuc_vao_thuc_don_hang_ngay">Thêm công thức vào thực đơn</string>

    <string name="bookmark_recipe">Thêm vào danh sách yêu thích</string>
</resources>