<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".SignupActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/anh"
            android:layout_width="130dp"
            android:layout_height="90dp"
            android:src="@drawable/anhapp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/welcome"
            android:textColor="?attr/colorPrimary"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:hint="@string/user_name"
        android:textColor="@color/black"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:background="@drawable/custombutton"
        android:backgroundTint="@color/white"
        android:layout_marginTop="110dp"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:background="@drawable/custombutton"
        android:backgroundTint="@color/white"
        android:layout_below="@+id/username"/>
    <EditText
        android:id="@+id/repassword"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:hint="@string/retype_password"
        android:background="@drawable/custombutton"
        android:backgroundTint="@color/white"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_below="@+id/password"/>
    <Button
        android:id="@+id/btndangki"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:background="@drawable/custombutton"
        android:layout_below="@id/repassword"/>
    <Button
        android:id="@+id/btndangnhap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/existing_user_go_to_sign_in"
        android:textColor="@color/white"
        android:background="@drawable/custombutton"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_below="@id/btndangki"/>
</RelativeLayout>