<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChiTietMonAnActivity">

    <TextView
        android:id="@+id/cttenmonan"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="?attr/colorPrimary"
        android:gravity="center"
        android:text="@string/title_chi_tiet"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="23sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/ctanh"
                android:layout_width="350dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/nganxaoxaot" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/nguoi_viet_2"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/user"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/nguoi_viet"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="17sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/cong_thuc_mon_an"
                android:textColor="?attr/colorPrimary"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ctcongthuc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:text="@string/ban_da_chon"
                android:textColor="?attr/colorOnBackground"
                android:textSize="15sp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnBookmark"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/them_cong_thuc_vao_thuc_don_hang_ngay"
        android:layout_margin="10dp"/>
</LinearLayout>