<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/anh"
            android:layout_width="135dp"
            android:layout_height="95dp"
            android:src="@drawable/anhapp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/welcome"
            android:textColor="?attr/colorPrimary"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:hint="@string/user_name"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/black"
        android:backgroundTint="#F5F5F5"
        android:background="@drawable/custombutton"
        android:layout_marginTop="150dp"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:hint="@string/password"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/black"
        android:backgroundTint="#F5F5F5"
        android:background="@drawable/custombutton"
        android:inputType="textPassword"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/username"/>
    <Button
        android:id="@+id/btndangnhap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:background="@drawable/custombutton"
        android:layout_gravity="center"
        android:backgroundTint="#00CC33"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:layout_below="@id/password"/>
    <Button
        android:id="@+id/btnback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:background="@drawable/custombutton"
        android:layout_gravity="center"
        android:backgroundTint="#00CC33"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:layout_below="@id/btndangnhap"/>
</RelativeLayout>