<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white"
    tools:context=".ProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="?attr/colorPrimary"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/avatar"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="left"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/baseline_account_circle_24"
            android:background="@drawable/circle"/>
        <TextView
            android:id="@+id/txtNameProfile"
            android:layout_marginLeft="18dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="30dp"
            android:text="@string/name"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <Button
        android:id="@+id/btnthemmon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/them_mon_an"
        android:backgroundTint="@color/white"
        android:background="@drawable/custombutton"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="30dp" />

    <Button
        android:id="@+id/btnbaidang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bai_viet_cua_toi"
        android:background="@drawable/custombutton"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btnbookmarks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Công thức yêu thích"
        android:background="@drawable/custombutton"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btnbacktc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:background="@drawable/custombutton"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>
    <Button
        android:id="@+id/btndangxuat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_out"
        android:background="@drawable/custombutton"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>
</LinearLayout>