<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp">
        <ImageView
            android:id="@+id/anhmonan"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:src="@drawable/nganxaoxaot" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="10dp">

        <TextView
            android:id="@+id/txttenmon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/title_mon_an"
            android:textColor="?attr/colorOnBackground"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <!-- Thông tin người dùng và loại món ăn -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nguoi_viet_2"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtuser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nguoi_viet"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="15sp"
                    android:layout_marginStart="5dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/txttype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/an_sang"
                android:textColor="?attr/colorSecondary"
                android:textSize="15sp"
                android:textStyle="bold"
                android:paddingStart="16dp"
                android:paddingEnd="16dp" />

            <!-- Hai nút Edit và Delete cùng hàng -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/btn_edit"
                    android:textAllCaps="false"
                    android:text="Edit"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:focusable="false"
                    android:focusableInTouchMode="false" />

                <Button
                    android:id="@+id/btn"
                    android:textAllCaps="false"
                    android:text="Delete"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:focusable="false"
                    android:focusableInTouchMode="false" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>