<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hình Ảnh Món Ăn"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/black" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:layout_marginTop="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <Button
                android:id="@+id/chuphinh"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Chụp hình"
                android:layout_marginEnd="8dp"
                android:background="@drawable/custombutton"/>

            <Button
                android:id="@+id/chonhinh"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Chọn hình"
                android:layout_marginStart="8dp"
                android:background="@drawable/custombutton"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tên Món Ăn"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/ten"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E8E8E8"
            android:padding="10dp"
            android:hint="Nhập vào tên món ăn"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Công Thức"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/congthuc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E8E8E8"
            android:padding="10dp"
            android:hint="Nhập vào công thức nấu ăn"/>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <RadioButton
                android:id="@+id/radioMonAnSang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/an_sang"/>

            <RadioButton
                android:id="@+id/radioMonAnTrua"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/an_trua"/>

            <RadioButton
                android:id="@+id/radioMonAnToi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/an_toi"/>

            <RadioButton
                android:id="@+id/radioMonAnPhu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/an_phu"/>
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/btnCapNhat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Cập nhật"
                android:background="@drawable/custombutton"/>

            <Button
                android:id="@+id/btnHuy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Hủy"
                android:layout_marginStart="16dp"
                android:background="@drawable/custombutton"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>